schedule clear handler
