# docs/api/openapi.yaml
@@ -388,6 +388,18 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         '500':
           $ref: '#/components/responses/InternalServerError'
+    delete:
+      description: Clear Schedule from given timestamp
+      tags:
+        - Schedule
+      security:
+        - editorAuth: []
+      parameters:
+        -
+          $ref: '#/components/parameters/timestampFrom'
+      responses:
+        '200':
+          description: Successfully cleaned
   /admin/schedule/{id}:
     parameters:
       -
@@ -611,7 +623,7 @@ components:
       description: Need authorization
   parameters: 
     JWT:
-      name: Authorisation
+      name: Authorization
       in: header
       description: token
       required: true
@@ -621,6 +633,14 @@ components:
       name: id
       in: path
       description: ID
+      required: true
+      schema:
+        type: integer
+        format: int64
+    timestampFrom:
+      description: UNIX timestamp
+      name: from
+      in: query
       required: true
       schema:
         type: integer
